; ModuleID = '/home/carl/AnghaBench/mpv/demux/extr_ebml.c_ebml_parse_length.c'
source_filename = "/home/carl/AnghaBench/mpv/demux/extr_ebml.c_ebml_parse_length.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@llvm.used = appending global [1 x i8*] [i8* bitcast (i32 (i32*, i64, i32*)* @ebml_parse_length to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal i32 @ebml_parse_length(i32* %0, i64 %1, i32* %2) #0 {
  %4 = alloca i32, align 4
  %5 = alloca i32*, align 8
  %6 = alloca i64, align 8
  %7 = alloca i32*, align 8
  %8 = alloca i32*, align 8
  %9 = alloca i32, align 4
  %10 = alloca i32, align 4
  %11 = alloca i32, align 4
  %12 = alloca i32, align 4
  %13 = alloca i32, align 4
  store i32* %0, i32** %5, align 8
  store i64 %1, i64* %6, align 8
  store i32* %2, i32** %7, align 8
  %14 = load i32*, i32** %7, align 8
  store i32 -1, i32* %14, align 4
  %15 = load i32*, i32** %5, align 8
  %16 = load i64, i64* %6, align 8
  %17 = getelementptr inbounds i32, i32* %15, i64 %16
  store i32* %17, i32** %8, align 8
  %18 = load i32*, i32** %5, align 8
  %19 = load i32*, i32** %8, align 8
  %20 = icmp eq i32* %18, %19
  br i1 %20, label %21, label %22

21:                                               ; preds = %3
  store i32 -1, i32* %4, align 4
  br label %90

22:                                               ; preds = %3
  %23 = load i32*, i32** %5, align 8
  %24 = getelementptr inbounds i32, i32* %23, i32 1
  store i32* %24, i32** %5, align 8
  %25 = load i32, i32* %23, align 4
  store i32 %25, i32* %9, align 4
  store i32 1, i32* %10, align 4
  store i32 128, i32* %11, align 4
  br label %26

26:                                               ; preds = %39, %22
  %27 = load i32, i32* %9, align 4
  %28 = load i32, i32* %11, align 4
  %29 = and i32 %27, %28
  %30 = icmp ne i32 %29, 0
  %31 = xor i1 %30, true
  br i1 %31, label %32, label %42

32:                                               ; preds = %26
  %33 = load i32, i32* %10, align 4
  %34 = add nsw i32 %33, 1
  store i32 %34, i32* %10, align 4
  %35 = load i32, i32* %10, align 4
  %36 = icmp sgt i32 %35, 8
  br i1 %36, label %37, label %38

37:                                               ; preds = %32
  store i32 -1, i32* %4, align 4
  br label %90

38:                                               ; preds = %32
  br label %39

39:                                               ; preds = %38
  %40 = load i32, i32* %11, align 4
  %41 = ashr i32 %40, 1
  store i32 %41, i32* %11, align 4
  br label %26

42:                                               ; preds = %26
  %43 = load i32, i32* %11, align 4
  %44 = sub nsw i32 %43, 1
  %45 = load i32, i32* %9, align 4
  %46 = and i32 %45, %44
  store i32 %46, i32* %9, align 4
  store i32 0, i32* %12, align 4
  %47 = load i32, i32* %9, align 4
  %48 = load i32, i32* %11, align 4
  %49 = sub nsw i32 %48, 1
  %50 = icmp eq i32 %47, %49
  br i1 %50, label %51, label %54

51:                                               ; preds = %42
  %52 = load i32, i32* %12, align 4
  %53 = add nsw i32 %52, 1
  store i32 %53, i32* %12, align 4
  br label %54

54:                                               ; preds = %51, %42
  store i32 1, i32* %13, align 4
  br label %55

55:                                               ; preds = %78, %54
  %56 = load i32, i32* %13, align 4
  %57 = load i32, i32* %10, align 4
  %58 = icmp slt i32 %56, %57
  br i1 %58, label %59, label %81

59:                                               ; preds = %55
  %60 = load i32*, i32** %5, align 8
  %61 = load i32*, i32** %8, align 8
  %62 = icmp eq i32* %60, %61
  br i1 %62, label %63, label %64

63:                                               ; preds = %59
  store i32 -1, i32* %4, align 4
  br label %90

64:                                               ; preds = %59
  %65 = load i32*, i32** %5, align 8
  %66 = load i32, i32* %65, align 4
  %67 = icmp eq i32 %66, 255
  br i1 %67, label %68, label %71

68:                                               ; preds = %64
  %69 = load i32, i32* %12, align 4
  %70 = add nsw i32 %69, 1
  store i32 %70, i32* %12, align 4
  br label %71

71:                                               ; preds = %68, %64
  %72 = load i32, i32* %9, align 4
  %73 = shl i32 %72, 8
  %74 = load i32*, i32** %5, align 8
  %75 = getelementptr inbounds i32, i32* %74, i32 1
  store i32* %75, i32** %5, align 8
  %76 = load i32, i32* %74, align 4
  %77 = or i32 %73, %76
  store i32 %77, i32* %9, align 4
  br label %78

78:                                               ; preds = %71
  %79 = load i32, i32* %13, align 4
  %80 = add nsw i32 %79, 1
  store i32 %80, i32* %13, align 4
  br label %55

81:                                               ; preds = %55
  %82 = load i32, i32* %12, align 4
  %83 = load i32, i32* %10, align 4
  %84 = icmp eq i32 %82, %83
  br i1 %84, label %85, label %86

85:                                               ; preds = %81
  store i32 -1, i32* %4, align 4
  br label %90

86:                                               ; preds = %81
  %87 = load i32, i32* %10, align 4
  %88 = load i32*, i32** %7, align 8
  store i32 %87, i32* %88, align 4
  %89 = load i32, i32* %9, align 4
  store i32 %89, i32* %4, align 4
  br label %90

90:                                               ; preds = %86, %85, %63, %37, %21
  %91 = load i32, i32* %4, align 4
  ret i32 %91
}


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
